--- a/app.html
+++ b/app.html
@@ -10,19 +10,21 @@
     <title>Neighborhood App</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- Always shows a header, even in smaller screens. -->
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header
+                mdl-layout--fixed-drawer">
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
-                <span class="mdl-layout-title">Neighborhood APP</span>
+                <span class="mdl-layout-title">Neighborhood</span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
-                <span class="mdl-layout-title">Bangalore</span>
+                <span class="mdl-layout-title mdl-layout--large-screen-only">Bangalore</span>
             </div>
         </header>
         <div class="mdl-layout__drawer">
@@ -32,17 +34,11 @@
             <a class="mdl-navigation__link" href="">Link</a>
             <a class="mdl-navigation__link" href="">Link</a>
             <a class="mdl-navigation__link" href="">Link</a>
+            <a href="https://developer.foursquare.com/">Powered by Foursquare</a>
         </nav>
         </div>
         <main class="mdl-layout__content">
             <div class="page-content"><!-- Your content goes here --></div>
-            <footer class="mdl-mini-footer">
-                <div class="mdl-mini-footer__right-section">
-                    <ul class="mdl-mini-footer__link-list">
-                        <li><a href="https://developer.foursquare.com/">Powered by Foursquare</a></li>
-                    </ul>
-                </div>
-            </footer>
         </main>
     </div>
     <script src="js/lib/knockout-3.2.0.js"></script>
