--- a/app.html
+++ b/app.html
@@ -28,8 +28,14 @@
             </div>
         </header>
         <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Title</span>
-        <nav class="mdl-navigation" data-bind="foreach: places">
+        <span class="mdl-layout-title">Places</span>
+        <select data-bind="options: places,
+                           optionsText: 'title',
+                           value: selectedCountry,
+                           optionsCaption: 'Choose a Place...',
+                           click: updateMarkers(selectedCountry)">
+        </select>
+        <nav class="mdl-navigation" data-bind="foreach: markers">
             <a class="mdl-navigation__link" data-bind="text: $data.title"></a>
         </nav>
         <a href="https://developer.foursquare.com/">Powered by Foursquare</a>
@@ -42,7 +48,4 @@
     <script src="js/lib/jquery-3.2.1.min.js"></script>
     <script async defer src="https://code.getmdl.io/1.0.6/material.min.js"></script>
     <script src="js/app.js"></script>
-    <script>
-        console.log('hi')
-    </script>
 </body> 
