--- a/app.html
+++ b/app.html
@@ -34,11 +34,11 @@
                            optionsCaption: 'Choose a Category...',
                            click: updateMarkers()">
         </select>
-        <nav class="mdl-navigation" data-bind="foreach: markers">
+        <div class="mdl-navigation" data-bind="foreach: markers">
             <a id="place" class="mdl-navigation__link" data-bind="text: $data.title,
-                                                       click: toggle(), clickBubble: false">
+                                                       click: $parent.toggle($data.marker), clickBubble: false">
             </a>
-        </nav>
+        </div>
         <a href="https://www.mediawiki.org/wiki/API:Main_page">Powered by Wikipedia</a>
         </div>
             <div id="map"><!-- map goes here --></div>
