--- a/app.html
+++ b/app.html
@@ -46,8 +46,8 @@
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/lib/jquery-3.2.1.min.js"></script>
     <script async defer src="https://code.getmdl.io/1.0.6/material.min.js"></script>
-    <script async defer
+    <script src="js/app.js"></script>
+    <script async defer onerror="mapNotLoaded()"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBC1c2PUaiOCAvTYe07lZ43mrUqKS7FhyE&v=3&callback=initMap">
     </script>
-    <script src="js/app.js"></script>
 </body> 
