--- a/app.html
+++ b/app.html
@@ -36,16 +36,18 @@
             </select>
             <div class="mdl-navigation" data-bind="foreach: markers">
                 <a id="place" class="mdl-navigation__link" data-bind="text: $data.title,
-                                                        click: $parent.toggle($data.marker), clickBubble: false">
+                                                        click: $parent.toggle($data.title(),$data.marker), clickBubble: false">
                 </a>
             </div>
             <a href="https://www.mediawiki.org/wiki/API:Main_page">Powered by Wikipedia</a>
         </div>
+        
         <div id="map"><!-- map goes here --></div>
     </div>
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/lib/jquery-3.2.1.min.js"></script>
     <script async defer src="https://code.getmdl.io/1.0.6/material.min.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/app.js"></script>
     <script async defer onerror="mapNotLoaded()"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBC1c2PUaiOCAvTYe07lZ43mrUqKS7FhyE&v=3&callback=initMap">
